add some new features * User and Account template * Repositories * main and development mode is completed * drawer menu * add settings * add home screen with drawer menu * add user jwt * add token

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,4 +6,8 @@ linter:
   rules:
     prefer_const_declarations: false
     constant_identifier_names: false
+    # Unnecessary 'new' keyword. (Documentation)
+    unnecessary_new: false
+    #    Use 'const' with the constructor to improve performance
+    prefer_const_constructors: false
 
