--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,40 +6,47 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.1.2 <4.0.0'
   flutter: '>3.13.0'
+
 dependencies:
-  #Flutter core related
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-
-  http:
-  dart_json_mapper:
-  dart_json_mapper_flutter:
-  flutter_secure_storage:
-  url_launcher:
-  datetime_picker_formfield:
+  adaptive_theme:
   cupertino_icons:
-  flutter_intl:
-
-  #BLoC pattern related
   flutter_bloc:
   equatable:
-  formz:
+  flutter_secure_storage:
+  dart_json_mapper:
+  dart_json_mapper_flutter:
+  http:
+  device_preview:
+  getwidget:
+  flutter_form_builder:
 
+dependency_overrides:
+  reflectable:
+  intl:
+  glob:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  build_runner:
+  flutter_lints:
+  build_runner: any
 
 flutter_intl:
   enabled: true
+  class_name: S
+  main_locale: en
+
+flutter_secure_storage:
+  enabled: true
+  class_name: SecureStorage
+  main_locale: en
 
 flutter:
   uses-material-design: true
-
   assets:
-    - assets/images/
+    - assets/images/Icon-192.png
 
