--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,9 @@ dependencies:
   device_preview:
   getwidget:
   flutter_form_builder:
-  loadmore: ^2.0.1
-  infinite_scroll_pagination:
+  form_builder_validators:
+  intl: ^0.18.1
+  string_2_icon:
 
 dependency_overrides:
   reflectable:
@@ -34,8 +35,12 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
   flutter_lints:
   build_runner: any
+
+
 
 flutter_intl:
   enabled: true
@@ -48,6 +53,7 @@ flutter_secure_storage:
   main_locale: en
 
 flutter:
+  generate: true
   uses-material-design: true
   assets:
     - assets/images/Icon-192.png
