mock data ile json menu modeli oluşturuldu...dil sayfa adı , icon bilgisi , url bilgisi ve parent bilgisi gibi bilgiler sahte data ile oluşturuldu. translate ile oluşturulan menu isimlerini çevirmek için traslate locale yapısı oıluşturuldu. dil desteği örneği sayfası incelenebilir.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   form_builder_validators:
   intl: ^0.18.1
   string_2_icon:
+  expansion_tile_card:
 
 dependency_overrides:
   reflectable:
@@ -35,6 +36,7 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable:
 
 
   flutter_lints:
