--- a/build.yaml
+++ b/build.yaml
@@ -5,6 +5,8 @@ targets:
         generate_for:
           - lib/main/main_local.dart
           - lib/main/main_prod.dart
+          - lib/main/main_mock_server.dart
+          - lib/main/main_mock_json.dart
       reflectable:
         generate_for:
           - no/files
