--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_bloc_advance
-description: flutter_bloc_advance
+description: Sekoya Tech Flutter Bloc Advance Template
 publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.2 <4.0.0'
+  sdk: '>=3.1.0 <4.0.0'
   flutter: '>3.0.0'
 
 dependencies:
@@ -29,7 +29,7 @@ dependencies:
   intl:
   string_2_icon:
   shared_preferences:
-  intl_utils: ^2.8.5
+  intl_utils:
   pattern_formatter:
   http_certificate_pinning:
   bloc_concurrency:
@@ -62,4 +62,5 @@ flutter:
   assets:
     - assets/mock/
     - assets/image/img.png
+    - assets/image/logoLight.png
 
