--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: flutter_bloc_advance
-description: Sekoya Tech Flutter Bloc Advance Template
+description: Flutter Bloc Advance Template
 publish_to: 'none'
 version: 1.0.0+1
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
-  flutter: '>3.0.0'
+  flutter: '>=3.24.3'
 
 dependencies:
   flutter:
