--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
-  flutter: '>=3.24.3'
+  sdk: ^3.5.3
+  flutter: '3.24.3'
 
 dependencies:
   flutter:
@@ -45,8 +45,8 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints:
-  build_runner: ^2.4.8
+  flutter_lints: ^4.0.0
+  build_runner:
 
 
 flutter_secure_storage:
