feat: edit_account screen and template , update: drawer menu language, theme template

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   modbus_client_tcp:
   custom_navigation_bar:
   flutter_inappwebview:
+  animated_toggle_switch:
 
 dependency_overrides:
   reflectable:
