--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   build_runner:
+  test: ^1.25.7
+  bloc_test: ^9.1.7
+  mockito: ^5.4.4
+
 
 
 flutter_secure_storage:
