build: add GitHub Actions for Flutter build and test

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -9,7 +9,7 @@ on:
       - main
 jobs:
   build:
-    name: Build and Test
+    name: Analyze and Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
