--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,6 +24,13 @@ jobs:
         uses: dart-lang/setup-dart@v1.6.5
         with:
           dart-version: 3.5.4
+      - name: Setup Java JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - name: flutter jdk configuration
+        run: flutter config --jdk-dir /usr/lib/jvm/java-17-openjdk-amd64
       - name: Install dependencies
         run: flutter pub get
       - name: Analyze
