--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,10 +1,15 @@
 name: Flutter Build And Test
 on:
   push:
+    ## all branches
     branches:
       - main
-      - unittest
-      - android-upgrade
+      - dev
+      - feature/*
+      - bugfix/*
+      - hotfix/*
+      - release/v*
+
   pull_request:
     branches:
       - main
