--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,9 +1,15 @@
 name: Flutter Build And Test
 on:
   push:
+    ## all branches
     branches:
       - main
-      - unittest
+      - dev
+      - feature/*
+      - bugfix/*
+      - hotfix/*
+      - release/v*
+
   pull_request:
     branches:
       - main
@@ -23,13 +29,22 @@ jobs:
         uses: dart-lang/setup-dart@v1.6.5
         with:
           dart-version: 3.5.4
+      - name: Setup Java JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - name: set JAVA_HOME
+        run: echo "JAVA_HOME=/usr/lib/jvm/temurin-17-jdk-amd64" >> $GITHUB_ENV
+      - name: flutter jdk configuration
+        run: flutter config --jdk-dir /usr/lib/jvm/temurin-17-jdk-amd64
       - name: Install dependencies
         run: flutter pub get
       - name: Analyze
         run: flutter analyze
       - name: Run tests
         run: flutter test
-#      - name: Build APK
-#        run: flutter build apk --release --target lib/main/main_prod.dart
-#      - name: Build Android App Bundle
-#        run: flutter build appbundle --release --target lib/main/main_prod.dart
+      - name: Build APK
+        run: flutter build apk --release --target lib/main/main_prod.dart
+      - name: Build Android App Bundle
+        run: flutter build appbundle --release --target lib/main/main_prod.dart
