--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ migrate_working_dir/
 
 .vscode/
 
+# unittest temp storage
+GetStorage.bak
+GetStorage.gs
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
