build: add sonar-scanner GitHub Actions

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ migrate_working_dir/
 # unittest temp storage
 GetStorage.bak
 GetStorage.gs
+coverage/
+tmp/
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
