--- a/.github/workflows/sonar_scanner.yml
+++ b/.github/workflows/sonar_scanner.yml
@@ -2,7 +2,7 @@ name: SonarQube Cloud
 on:
   push:
     branches:
-      - main
+      - sonar
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
