--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Analyze
         run: flutter analyze
       - name: Run tests
-        run: flutter test
+        run: flutter test --concurrency=1 --test-randomize-ordering-seed=random
       - name: Build APK
         run: flutter build apk --release --target lib/main/main_prod.dart
       - name: Build Android App Bundle
