Storage and cache improvement (#26)
* Add a new AppLocalStorage layer to manage storage.
* Remove get_storage, path_provider, fake_async and synchronized packages.
* Fix UniTests storage problem
* Fix a lot of reading storage
* Fix cached roles when first login
* Remove utils/storage.dart class
* Add account_repository_test

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -42,6 +42,8 @@ jobs:
         run: flutter pub get
       - name: Analyze
         run: flutter analyze
+      #      - name: Run tests
+      #        run: flutter test --concurrency=1 --test-randomize-ordering-seed=random
       - name: Run tests
         run: flutter test
       - name: Build APK
