build: sonarcloud integration

--- a/.github/workflows/sonar_scanner.yml
+++ b/.github/workflows/sonar_scanner.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - sonar
   pull_request:
+    branches:
+      - sonar
     types: [opened, synchronize, reopened]
 jobs:
   build:
