build: sonarcloud integration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,10 @@ sonar.organization=cevheri-open-source
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=lib/
+sonar.test.exclusions=test/**
+sonar.tests=test/
+sonar.verbose=true
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
