--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=cevheri_flutter-bloc-advanced
 sonar.organization=cevheri-open-source
+sonar.host.url=https://sonarcloud.io
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=flutter-bloc-advanced
@@ -11,6 +12,7 @@ sonar.sources=lib/
 sonar.test.exclusions=test/**
 sonar.tests=test/
 sonar.verbose=true
+sonar.dart.lcov.reportPaths=coverage/lcov.info
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
