--- a/.github/workflows/sonar_scanner.yml
+++ b/.github/workflows/sonar_scanner.yml
@@ -3,10 +3,12 @@ on:
   push:
     branches:
       - sonar
+      - main
   pull_request:
     branches:
       - sonar
-    types: [opened, synchronize, reopened]
+      - main
+    types: [ opened, synchronize, reopened ]
 jobs:
   build:
     name: Build and analyze
@@ -17,12 +19,41 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2.16.0
+        with:
+          flutter-version: 3.24.4
+          channel: stable
+      - name: Setup Dart
+        uses: dart-lang/setup-dart@v1.6.5
+        with:
+          dart-version: 3.5.4
+
+      - name: Setup Java JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - name: set JAVA_HOME
+        run: echo "JAVA_HOME=/usr/lib/jvm/temurin-17-jdk-amd64" >> $GITHUB_ENV
+      - name: flutter jdk configuration
+        run: flutter config --jdk-dir /usr/lib/jvm/temurin-17-jdk-amd64
+
+      - name: Install dependencies
+        run: flutter pub get
+      - name: Analyze
+        run: flutter analyze
+      - name: Run tests
+        run: flutter test
+
       - name: Cache SonarQube Cloud packages
         uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
+
       - name: Build
         run: flutter build apk --release --target lib/main/main_prod.dart
       - name: Download sonar-scanner
@@ -31,9 +62,11 @@ jobs:
           unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
       - name: Build and analyze
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           $HOME/.sonar/sonar-scanner-6.2.1.4610-linux-x64/bin/sonar-scanner \
           -Dsonar.projectKey=cevheri_flutter-bloc-advanced \
-          -Dsonar.organization=cevheri-open-source
+          -Dsonar.organization=cevheri-open-source \
+          -Dsonar.sources=. \
+          -Dsonar.host.url=https://sonarcloud.io
