--- a/.github/workflows/sonar_scanner.yml
+++ b/.github/workflows/sonar_scanner.yml
@@ -14,21 +14,21 @@ jobs:
     name: Build and analyze
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/cirruslabs/flutter:stable
+      image: ghcr.io/cirruslabs/flutter:3.24.4
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2.16.0
-        with:
-          flutter-version: 3.24.4
-          channel: stable
-      - name: Setup Dart
-        uses: dart-lang/setup-dart@v1.6.5
-        with:
-          dart-version: 3.5.4
+#      - name: Setup Flutter
+#        uses: subosito/flutter-action@v2.16.0
+#        with:
+#          flutter-version: 3.24.4
+#          channel: stable
+#      - name: Setup Dart
+#        uses: dart-lang/setup-dart@v1.6.5
+#        with:
+#          dart-version: 3.5.4
 
       - name: Setup Java JDK 17
         uses: actions/setup-java@v4
