build: sonarcloud integration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.projectVersion=1.0
 #sonar.sources=lib/
 sonar.exclusions=**/test/**
 #sonar.test.exclusions=test/**
-#sonar.tests=test/
+sonar.tests=test/
 #sonar.verbose=true
 
 # Encoding of the source code. Default is default system encoding
