build: main dart files excluded from sonar Duplication exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,6 +14,7 @@ sonar.exclusions=**/test/**
 #sonar.test.exclusions=test/**
 sonar.tests=test/
 #sonar.verbose=true
+sonar.cpd.exclusions=lib/main/**
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
