build: sonar high issues fixed

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,10 +10,13 @@ sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=lib/
-sonar.exclusions=**/test/**
+#sonar.exclusions=**/test/**
 #sonar.test.exclusions=test/**
 sonar.tests=test/
 #sonar.verbose=true
+# exclude:  lib/generated and lib/main dart files
+sonar.exclusions=lib/generated/**,lib/main/**,test/**
+
 sonar.cpd.exclusions=lib/main/**
 
 # Encoding of the source code. Default is default system encoding
