test: add localization unittest

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.projectVersion=1.0
 sonar.tests=test/
 #sonar.verbose=true
 # exclude:  lib/generated and lib/main dart files
-sonar.exclusions=lib/generated/**,**/generated/**,lib/main/**,test/**,linux/**,macos/**,windows/**,build/**,ios/**,android/**,web/**,example/**,packages/**,pubspec.lock
+sonar.exclusions=lib/main/**,test/**,linux/**,macos/**,windows/**,build/**,ios/**,android/**,web/**,example/**,packages/**,pubspec.lock
 
 sonar.cpd.exclusions=lib/main/**
 
