--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ GetStorage.gs
 coverage/
 tmp/
 
+# sonar
+.scannerwork/
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
