fix: sonar source

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,13 +9,13 @@ sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=lib/
+sonar.sources=lib/
 #sonar.exclusions=**/test/**
 #sonar.test.exclusions=test/**
 sonar.tests=test/
 #sonar.verbose=true
 # exclude:  lib/generated and lib/main dart files
-sonar.exclusions=lib/main/**,test/**,linux/**,macos/**,windows/**,build/**,ios/**,android/**,web/**,example/**,packages/**,pubspec.lock
+sonar.exclusions=lib/main/**,test/**,linux/**,macos/**,windows/**,build/**,ios/**,android/**,web/**,example/**,packages/**,pubspec.lock,functions/**,lib/generated/**,lib/i18n/**
 
 sonar.cpd.exclusions=lib/main/**
 
