fix: sonar source

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,7 @@ sonar.exclusions=lib/main/**,test/**,linux/**,macos/**,windows/**,build/**,ios/*
 sonar.cpd.exclusions=lib/main/**
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
 
 sonar.c.file.suffixes=-
 sonar.cpp.file.suffixes=-
