build: enable sonar

--- a/.github/workflows/sonar_scanner.yml
+++ b/.github/workflows/sonar_scanner.yml
@@ -3,11 +3,11 @@ on:
   push:
     branches:
       - sonar
-#      - main
+      - main
   pull_request:
     branches:
       - sonar
-#      - main
+      - main
     types: [ opened, synchronize, reopened ]
 jobs:
   build:
