test: add unittest coverage - account screen

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.sources=lib/
 sonar.tests=test/
 #sonar.verbose=true
 # exclude:  lib/generated and lib/main dart files
-sonar.exclusions=assets/**,lib/main/**,test/**,linux/**,macos/**,windows/**,build/**,ios/**,android/**,web/**,example/**,packages/**,pubspec.lock,functions/**,lib/generated/**,lib/i18n/**
+sonar.exclusions=assets/**,lib/main/**,test/**,linux/**,macos/**,windows/**,build/**,ios/**,android/**,web/**,example/**,packages/**,pubspec.lock,functions/**,lib/generated/**,lib/i18n/**,lib/routes/app_router.dart
 
 sonar.cpd.exclusions=lib/main/**
 
