feat: replace string_2_icon with icon_utils and update drawer widget
This commit removes the `string_2_icon` dependency and introduces a new utility, `icon_utils`, for icon management. The `ApplicationDrawer` widget is updated to utilize the new `getIconFromString` function for icon retrieval. Additionally, a deployment script for Flutter web is added to streamline the build and deployment process.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,6 @@ dependencies:
   getwidget:
   flutter_form_builder:
   form_builder_validators:
-  string_2_icon:
   intl_utils:
   http_certificate_pinning:
   bloc_concurrency:
@@ -61,6 +60,9 @@ flutter_secure_storage:
 
 flutter_intl:
   enabled: true
+  template-arb-file: lib/l10n/intl_en.arb
+  output-localization-file: l10n.dart
+  output-class: S
 
 flutter:
   uses-material-design: true
