build: update GitHub token for deployment

--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -48,5 +48,5 @@ jobs:
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PAT_GITHUB_TOKEN }}
           publish_dir: build/web
