--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,12 +24,12 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2.18.0
         with:
-          flutter-version: 3.27.1
+          flutter-version: 3.32.8
           channel: stable
       - name: Setup Dart
-        uses: dart-lang/setup-dart@v1.7.0
+        uses: dart-lang/setup-dart@v1.7.1
         with:
-          dart-version: 3.6.0
+          dart-version: 3.8.1
 
       - name: Setup Java JDK 17
         uses: actions/setup-java@v4
@@ -47,8 +47,8 @@ jobs:
         run: flutter analyze
       #      - name: Run tests
       #        run: flutter test --concurrency=1 --test-randomize-ordering-seed=random
-#      - name: Run tests
-#        run: flutter test
+      - name: Run tests
+        run: flutter test
       - name: Build APK
         run: flutter build apk --release --target lib/main/main_prod.dart
       - name: Build Android App Bundle
