--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,8 @@ dev_dependencies:
   build_runner: 2.4.15
   test: 1.25.15
   bloc_test: 9.1.7
-  mockito: 5.4.5
+  mockito: ^5.4.5
+  analyzer: ^6.11.0
 
 flutter_secure_storage:
   enabled: true
