--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -45,8 +45,10 @@ jobs:
         run: flutter pub get
       - name: Analyze
         run: flutter analyze
-      - name: Run tests
-        run: flutter test
+      - name: Run tests with timeout
+        continue-on-error: true
+        timeout-minutes: 15
+        run: flutter test --timeout=30s --concurrency=4 --reporter=compact
       - name: Build APK
         run: flutter build apk --release --target lib/main/main_prod.dart
       - name: Build Android App Bundle
